fixed image wrap

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 .header-parent {
   display: flex;
   width: 100%;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   justify-content: center;
   background-position: 90%;
   background-size: cover;
